--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="CSS/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <title>PlayMusic</title>
   </head>
   <body>
